added the fix for the ERROR javax.xml.transform.TransformerException: org.apache.xml.dtm.DTMException: No more DTM IDs are available, error, occuring when building documention with jdk 1.4
git-svn-id: https://scm.mmbase.org/mmbase/trunk@7189 91430c5f-d668-0410-9e7d-dd663366dcfd